flux/apps/osu-replay-viewer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osu-replay-viewer
spec:
  selector:
    app: osu-replay-viewer
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
