flux/apps/osu-replay-viewer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osu-replay-viewer
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - orv.danielpower.ca
      secretName: osu-replay-viewer-tls
  rules:
    - host: orv.danielpower.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: osu-replay-viewer
                port:
                  name: http
